--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,10 +9,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  provider: ^6.0.0
+  localstore: ^1.3.5
+  freezed_annotation: ^2.0.0
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  build_runner: any
+  freezed: ^2.0.0
+  json_serializable: ^6.0.0
   integration_test:
     sdk: flutter
   flutter_lints: ^4.0.0
